m_Buffs: fixed timers overlapping icons @ debuffs; also adjusted border anchors which were off due to texture changes
m_Chat: removed styling of default time stamps (for now)
m_Map: added option to display decimal part of map coordinates
m_Map: removed tooltip fix for quest blobs
m_ActionBars: exit vehicle button when docked will always have its position locked by last available Bar1 button
m_Loot: adjusted size and position of several elements; overall made loot frames bigger

====== v. 11.2 rev 1 ======
m_Bags: fixed caged battle pets being invisible in bags
m_Bags: added quality coloring for caged battle pets
m_BrokerStuff: volume controll panel restyled and repositioned
m_Chat: major changes to style function
m_Chat: added pet battle combat log stylizations
m_Chat: removed few config vars
m_MailGet: removed
m_Tweaks: added new MailGet module, added config var to cfg.lua (cfg.EnableMailGet)
m_Tweaks: raid buffs module brought back to life with updated spell ids and buffs sets
m_Tweaks: added new flask IDs to the buffs checker
m_Tweaks: minor tweaks for StyleNRun module
m_CombatText: aoe list updated for shamans
m_Minimap: added Pets Journal to the right-click menu
m_ActionBars: fixed the issue with bars not disappearing properly during a pet battle
m_ActionBars: raid mark bar will be shown in party group even if you are not a leader
m_ActionBars: 4 more buttons for the middle cluster making it 2x10buttons bar in default state
oUF_mono: player & target unitframes repositioned
oUF_mono: added missing indicators for monks
oUF_mono: fixed tags counter tags for POM, ES, etc.
oUF_mono: fixed error with abbrev function of totembar module
oUF_mono: removed abbreviations from totem bar
oUF_mono: reworked class specific powers to fit new ClassIcons design in oUF
oUF_mono: added option to undock AltPowerBar from the player frame (cfg.UnDockAltPowerBar) and set custom position for it (cfg.AltPoiwerBarPosition)
m_Loot: attempt to fix missing color varriable error